Started updating landing page

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -99,7 +99,51 @@
 
     <!-- Page Content -->
 
-	
+    <a  name="hackhealth"></a>
+	<div class="content-section-a">
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                   <a href="pages/proj8/hackhealth.html"> <h2 class="section-heading">Hack Health Winner: Shopify Hosted Hackathon</h2> </a>
+                    <p class="lead">Assembled and lead a team to win the Ottawa Hack Health event at Shopify.</p>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-8">
+                    <img class="img-responsive" src="img/lightsheet_title.jpg" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+	</div>
+
+
+    <a  name="lightsheet"></a>
+	<div class="content-section-a">
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                   <a href="pages/proj7/lightsheet.html"> <h2 class="section-heading"> Lightsheet Microscope</h2> </a>
+                    <p class="lead">A complete lightsheet microscope system.</p>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-8">
+                    <img class="img-responsive" src="img/lightsheet_title.jpg" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+	</div>
+
+
+
 		<a  name="singlepellet"></a>
 	<div class="content-section-b">
         <div class="container">
@@ -118,10 +162,10 @@
 
         </div>
         <!-- /.container -->
-	
+
 	</div>
-	
-	
+
+
 	<a  name="videosurveillance"></a>
     <div class="content-section-a">
         <div class="container">
@@ -129,7 +173,7 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                   <a href="pages/proj1/surveillance_proj.html"> <h2 class="section-heading"> Automated Video Surveillance: <br>OpenCV + Raspberry Pi </h2> </a> 
+                   <a href="pages/proj1/surveillance_proj.html"> <h2 class="section-heading"> Automated Video Surveillance: <br>OpenCV + Raspberry Pi </h2> </a>
                     <p class="lead">A remotely accessible surveillance system that uses image recognition to identify objects and automatically alert users.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
@@ -141,7 +185,7 @@
         <!-- /.container -->
 
     </div>
-	
+
 	<a  name="neuralnetwork"></a>
 	<div class="content-section-b">
         <div class="container">
@@ -160,7 +204,7 @@
 
         </div>
         <!-- /.container -->
-	
+
 	</div>
 
 	<a  name="androidmediaplayer"></a>
@@ -171,7 +215,7 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                   <a href="pages/proj3/mediaplayer.html"> <h2 class="section-heading">Android Media Player</h2> </a> 
+                   <a href="pages/proj3/mediaplayer.html"> <h2 class="section-heading">Android Media Player</h2> </a>
                     <p class="lead">Automatically detects, organizes and fills in missing info/art for local music using Last.fm API. A lot of care was put into the GUI to ensure ease of use,
 						good aesthetics and smootheness even with very large music libraries.</p>
                 </div>
@@ -184,9 +228,9 @@
         <!-- /.container -->
 
     </div>
-	
-	
-	
+
+
+
     <!-- /.content-section-a -->
 
     <div class="content-section-b">
@@ -232,7 +276,7 @@
 
     </div>
     <!-- /.content-section-a -->
-	
+
 	    <div class="content-section-b">
 
         <div class="container">
