--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -52,7 +52,7 @@
                         <a href="#about">About</a>
                     </li>
                     <li>
-                        <a href="#services">Projects</a>
+                        <a href="#hackhealth">Projects</a>
                     </li>
                     <li>
                         <a href="#contact">Contact</a>
@@ -100,18 +100,18 @@
     <!-- Page Content -->
 
     <a  name="hackhealth"></a>
-	<div class="content-section-a">
+	<div class="content-section-b">
         <div class="container">
 
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                   <a href="pages/proj8/hackhealth.html"> <h2 class="section-heading">Hack Health Winner: Shopify Hosted Hackathon</h2> </a>
-                    <p class="lead">Assembled and lead a team to win the Ottawa Hack Health event at Shopify.</p>
+                   <a href="pages/proj8/hackhealth.html"> <h2 class="section-heading">Hacking Health</h2> </a>
+                    <p class="lead">Organized and lead a team to win the Ottawa Hacking Health event at Shopify.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-8">
-                    <img class="img-responsive" src="img/lightsheet_title.jpg" alt="">
+                    <img class="img-responsive" src="img/hackhealth.jpg" alt="">
                 </div>
             </div>
 
@@ -124,7 +124,6 @@
     <a  name="lightsheet"></a>
 	<div class="content-section-a">
         <div class="container">
-
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
@@ -147,16 +146,15 @@
 		<a  name="singlepellet"></a>
 	<div class="content-section-b">
         <div class="container">
-
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                   <a href="pages/proj6/single_pellet.html"> <h2 class="section-heading"> Automated Single Pellet</h2> </a>
-                    <p class="lead">24/7 automation of the Single Pellet experiment for whole mouse colonies. This will be posted once the project is 100% complete and I've obtained permission to post it.</p>
+                   <a href="https://github.com/JulianPitney/HomeCageSinglePellet"> <h2 class="section-heading"> Automated Single Pellet</h2> </a>
+                    <p class="lead">24/7 automation of the Single Pellet experiment for whole mouse colonies.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-8">
-                    <img class="img-responsive" src="img/single_pellet.png" alt="">
+                    <img class="img-responsive" src="img/reach.gif" alt="">
                 </div>
             </div>
 
@@ -183,7 +181,6 @@
 
         </div>
         <!-- /.container -->
-
     </div>
 
 	<a  name="neuralnetwork"></a>
