Realign 1 row by removing the offset causing floated rows to overflow.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -107,10 +107,10 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                   <a href="pages/proj8/hackhealth.html"> <h2 class="section-heading">Hacking Health</h2> </a>
+                    <a href="pages/proj8/hackhealth.html"> <h2 class="section-heading">Hacking Health</h2> </a>
                     <p class="lead">Organized and lead a team to win the Ottawa Hacking Health event at Shopify.</p>
                 </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-8">
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/hackhealth.jpg" alt="">
                 </div>
             </div>
@@ -124,15 +124,16 @@
     <a  name="lightsheet"></a>
 	<div class="content-section-a">
         <div class="container">
+
             <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                    <a href="pages/proj7/lightsheet.html"> <h2 class="section-heading"> Lightsheet Microscope</h2> </a>
                     <p class="lead">A complete lightsheet microscope system.</p>
                 </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-8">
-                    <img class="img-responsive" src="img/lightsheet_title.jpg" alt="">
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                        <img class="img-responsive" src="img/lightsheet_title.jpg" alt="">
                 </div>
             </div>
 
@@ -153,7 +154,7 @@
                    <a href="https://github.com/JulianPitney/HomeCageSinglePellet"> <h2 class="section-heading"> Automated Single Pellet</h2> </a>
                     <p class="lead">24/7 automation of the Single Pellet experiment for whole mouse colonies.</p>
                 </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-8">
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/reach.gif" alt="">
                 </div>
             </div>
@@ -194,7 +195,7 @@
                    <a href="pages/proj2/neural_net.html"> <h2 class="section-heading"> Neural Network: <br>Gradient Descent for Supervised Machine Learning</h2> </a>
                     <p class="lead">Generates, trains and benchmarks neural networks of arbitrary size using a polymorphic interface for working with a variety of input data formats.</p>
                 </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-8">
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/neuralnet.png" alt="">
                 </div>
             </div>
