--- a/htdocs/pages/proj8/hackhealth.html
+++ b/htdocs/pages/proj8/hackhealth.html
@@ -95,9 +95,102 @@
                 and assigned development work. After these meetings I would speak with our sub-teams one on one to make sure they were getting what they needed from the other sub-teams, and make sure the things they were building were going to interface and work correctly with other components. Keeping everyone on the same page and keeping development moving in the right direction is hard
                 at the best of times (It was the best of times because our whole team was awesome), and doing that without micromanaging and stepping on people's toes is even harder. I'm lucky our whole team was competent, cooperative and generally pleasant to work with. Because of this, we managed to get an incredible amount done given the time constraints, and work 12 hour days
                 side by side for multiple days, all while enjoying the event and having a ton of fun.</p>
-            <div class="col-md-16">
-                <img class="img-responsive" src="images/ottawahackhealth.jpg" alt="">
+
+            <style>
+            div.gallery {
+              margin: 5px;
+              border: 1px solid #ccc;
+              float: left;
+              width: 500px;
+            }
+
+            div.gallery:hover {
+              border: 1px solid #777;
+            }
+
+            div.gallery img {
+              width: 100%;
+              height: 360px;
+            }
+
+            div.desc {
+              padding: 15px;
+              text-align: center;
+            }
+            </style>
+            </head>
+            <body>
+
+            <div class="gallery">
+              <a target="_blank" href="images/award.jpg">
+                <img src="images/award.jpg" alt="Cinque Terre" width="600" height="400">
+              </a>
+              <div class="desc">Add a description of the image here</div>
             </div>
+
+            <div class="gallery">
+              <a target="_blank" href="images/device.jpg">
+                <img src="images/device.jpg" alt="Forest" width="600" height="400">
+              </a>
+              <div class="desc">Add a description of the image here</div>
+            </div>
+
+            <div class="gallery">
+              <a target="_blank" href="images/brokenbuilding.jpg">
+                <img src="images/brokenbuilding.jpg" alt="Northern Lights" width="600" height="400">
+              </a>
+              <div class="desc">Add a description of the image here</div>
+            </div>
+
+            <div class="gallery">
+              <a target="_blank" href="images/teamottawa.jpg">
+                <img src="images/teamottawa.jpg" alt="Mountains" width="600" height="400">
+              </a>
+              <div class="desc">Add a description of the image here</div>
+            </div>
+
+            <div class="gallery">
+              <a target="_blank" href="images/matt.jpg">
+                <img src="images/matt.jpg" alt="Mountains" width="600" height="400">
+              </a>
+              <div class="desc">Add a description of the image here</div>
+            </div>
+
+
+            <div class="gallery">
+              <a target="_blank" href="images/john.jpg">
+                <img src="images/john.jpg" alt="Mountains" width="600" height="400">
+              </a>
+              <div class="desc">Add a description of the image here</div>
+            </div>
+
+
+            <div class="gallery">
+              <a target="_blank" href="images/quantum.jpg">
+                <img src="images/quantum.jpg" alt="Mountains" width="600" height="400">
+              </a>
+              <div class="desc">Add a description of the image here</div>
+            </div>
+
+
+            <div class="gallery">
+              <a target="_blank" href="images/strangeman.jpg">
+                <img src="images/strangeman.jpg" alt="Mountains" width="600" height="400">
+              </a>
+              <div class="desc">Add a description of the image here</div>
+            </div>
+
+
+            <div class="gallery">
+              <a target="_blank" href="images/hook.jpg">
+                <img src="images/hook.jpg" alt="Mountains" width="600" height="400">
+              </a>
+              <div class="desc">Add a description of the image here</div>
+            </div>
+
+
+
+
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
