Added kinbox page

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -99,6 +99,31 @@
 
     <!-- Page Content -->
 
+
+
+    <a  name="3D Kinematics"></a>
+	<div class="content-section-a">
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                   <a href="pages/proj9/3dkinematics.html"> <h2 class="section-heading">3D Kinematics Box</h2> </a>
+                    <p class="lead">A Markerless 3D Pose Estimation System</p>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                        <img class="img-responsive" src="img/kinbox.jpg" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+	</div>
+
+
+
     <a  name="hackhealth"></a>
 	<div class="content-section-b">
         <div class="container">
