Updating some project pages

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -99,9 +99,7 @@
 
     <!-- Page Content -->
 
-
-
-    <a  name="3D Kinematics"></a>
+    <a  name="lightsheet"></a>
 	<div class="content-section-a">
         <div class="container">
 
@@ -109,11 +107,11 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                   <a href="pages/proj9/3dkinematics.html"> <h2 class="section-heading">3D Kinematics Box</h2> </a>
-                    <p class="lead">A Markerless 3D Pose Estimation System</p>
+                   <a href="pages/proj7/lightsheet.html"> <h2 class="section-heading"> Lightsheet Microscope</h2> </a>
+                    <p class="lead">Designed and implemented a complete lightsheet microscope system.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                        <img class="img-responsive" src="img/kinbox.jpg" alt="">
+                        <img class="img-responsive" src="img/lightsheet_title.jpg" alt="">
                 </div>
             </div>
 
@@ -146,27 +144,26 @@
 	</div>
 
 
-    <a  name="lightsheet"></a>
-	<div class="content-section-a">
-        <div class="container">
+  <a  name="3D Kinematics"></a>
+<div class="content-section-a">
+      <div class="container">
 
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                   <a href="pages/proj7/lightsheet.html"> <h2 class="section-heading"> Lightsheet Microscope</h2> </a>
-                    <p class="lead">A complete lightsheet microscope system.</p>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                        <img class="img-responsive" src="img/lightsheet_title.jpg" alt="">
-                </div>
-            </div>
+          <div class="row">
+              <div class="col-lg-5 col-sm-6">
+                  <hr class="section-heading-spacer">
+                  <div class="clearfix"></div>
+                 <a href="https://github.com/JulianPitney/3D-Kinematics"> <h2 class="section-heading">3D Kinematics Box</h2> </a>
+                  <p class="lead">Designed and implemented a markerless, 360° coverage, hardware synchronized and fully automated 3D pose estimation system.</p>
+              </div>
+              <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                      <img class="img-responsive" src="img/kinbox.jpg" alt="">
+              </div>
+          </div>
 
-        </div>
-        <!-- /.container -->
+      </div>
+      <!-- /.container -->
 
-	</div>
-
+</div>
 
 
 		<a  name="singlepellet"></a>
@@ -177,7 +174,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                    <a href="https://github.com/JulianPitney/HomeCageSinglePellet"> <h2 class="section-heading"> Automated Single Pellet</h2> </a>
-                    <p class="lead">24/7 automation of the Single Pellet experiment for whole mouse colonies.</p>
+                    <p class="lead">Designed and implemented a system that hosts up to 5 mice in their home environment and automatically administers the single pellet reaching test while collecting useful data.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/reach.gif" alt="">
