--- a/htdocs/pages/proj8/hackhealth.html
+++ b/htdocs/pages/proj8/hackhealth.html
@@ -81,7 +81,7 @@
             </div>
 
                 <h3>Overview</h3>
-                <p>Our team placed first in the Hacking Health hackathon hosted at Shopify in Ottawa. For winning, we received round trip flights, hotel accomodations and conference passes for a full week in Waterloo. There, we were invited to pitch our product again at the finals which were held at the True North conferece.</p>
+                <p>Our team placed first in the Hacking Health hackathon hosted at Shopify in Ottawa. For winning, we received round trip flights, hotel accomodations and conference passes for a few days in Waterloo. There, we were invited to pitch our product again at the finals which were held at the True North conferece.</p>
                 <h3>The Hackathon</h3>
                 <p>The goal of the hackathon was to assemble into teams of 10 and spend the weekend developing a product/solution that addressed a problem in healthcare. The sub-categories were social isolation, connected care and increasing the efficiency and effectiveness of diagnoses</p>
                 <h3>Our Solution</h3>
@@ -96,7 +96,14 @@
                 at the best of times (It was the best of times because our whole team was awesome), and doing that without micromanaging and stepping on people's toes is even harder. I'm lucky our whole team was competent, cooperative and generally pleasant to work with. Because of this, we managed to get an incredible amount done given the time constraints, and work 12 hour days
                 side by side for multiple days, all while enjoying the event and having a ton of fun.</p>
 
+                <video width="1280" height="720" controls>
+                <source src="../../videos/healthmoves_voiceover.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+                </video>
+
+
             <style>
+
             div.gallery {
               margin: 5px;
               border: 1px solid #ccc;
@@ -125,35 +132,35 @@
               <a target="_blank" href="images/award.jpg">
                 <img src="images/award.jpg" alt="Cinque Terre" width="600" height="400">
               </a>
-              <div class="desc">Add a description of the image here</div>
+              <div class="desc">The team receiving our award at Shopify!</div>
             </div>
 
             <div class="gallery">
               <a target="_blank" href="images/device.jpg">
                 <img src="images/device.jpg" alt="Forest" width="600" height="400">
               </a>
-              <div class="desc">Add a description of the image here</div>
+              <div class="desc">Testing the system.</div>
             </div>
 
             <div class="gallery">
               <a target="_blank" href="images/brokenbuilding.jpg">
                 <img src="images/brokenbuilding.jpg" alt="Northern Lights" width="600" height="400">
               </a>
-              <div class="desc">Add a description of the image here</div>
+              <div class="desc">Cool shot from Waterloo.</div>
             </div>
 
             <div class="gallery">
               <a target="_blank" href="images/teamottawa.jpg">
                 <img src="images/teamottawa.jpg" alt="Mountains" width="600" height="400">
               </a>
-              <div class="desc">Add a description of the image here</div>
+              <div class="desc">Team photo in Ottawa.</div>
             </div>
 
             <div class="gallery">
               <a target="_blank" href="images/matt.jpg">
                 <img src="images/matt.jpg" alt="Mountains" width="600" height="400">
               </a>
-              <div class="desc">Add a description of the image here</div>
+              <div class="desc">Matt!</div>
             </div>
 
 
@@ -161,7 +168,7 @@
               <a target="_blank" href="images/john.jpg">
                 <img src="images/john.jpg" alt="Mountains" width="600" height="400">
               </a>
-              <div class="desc">Add a description of the image here</div>
+              <div class="desc">John being lurked upon.</div>
             </div>
 
 
@@ -169,7 +176,7 @@
               <a target="_blank" href="images/quantum.jpg">
                 <img src="images/quantum.jpg" alt="Mountains" width="600" height="400">
               </a>
-              <div class="desc">Add a description of the image here</div>
+              <div class="desc">Quantum revolution presentation.</div>
             </div>
 
 
@@ -177,7 +184,7 @@
               <a target="_blank" href="images/strangeman.jpg">
                 <img src="images/strangeman.jpg" alt="Mountains" width="600" height="400">
               </a>
-              <div class="desc">Add a description of the image here</div>
+              <div class="desc">Art.</div>
             </div>
 
 
@@ -185,7 +192,7 @@
               <a target="_blank" href="images/hook.jpg">
                 <img src="images/hook.jpg" alt="Mountains" width="600" height="400">
               </a>
-              <div class="desc">Add a description of the image here</div>
+              <div class="desc">More art.</div>
             </div>
 
 
