Added mouse surgery bot project

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -99,6 +99,30 @@
 
     <!-- Page Content -->
 
+    
+    <a  name="surgerybot"></a>
+	<div class="content-section-b">
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <a href="pages/CAT_ROBOT/cat_robot.html"> <h2 class="section-heading">Mouse Surgery Robot</h2> </a>
+                    <p class="lead">Designed and built a robot for automating craniotomies in research mice.</p>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                    <img class="img-responsive" src="pages/CAT_ROBOT/images/285183684_581245230191818_738763148605609657_n.jpg" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+	</div>
+
+
+
     <a  name="lightsheet"></a>
 	<div class="content-section-a">
         <div class="container">
