--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -99,6 +99,50 @@
 
     <!-- Page Content -->
 
+    <a  name="LEDCUBE"></a>
+	<div class="content-section-b">
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <a href="pages/LED_CUBE/led_cube.html"> <h2 class="section-heading">LED Animation Cube</h2> </a>
+                    <p class="lead">Built an open source design for a 3D LED animation cube.</p>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                    <img class="img-responsive" src="pages//LED_CUBE/images/PXL_20220619_112533734.jpg" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+	</div>
+
+
+
+    <a  name="PCR Machine"></a>
+	<div class="content-section-a">
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                   <a href="pages/LAMP/lamp.html"> <h2 class="section-heading"> PCR Machine</h2> </a>
+                    <p class="lead">Designed and built a thermal cycler with integrated fluorimeter for automated LAMP/PCR.</p>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                        <img class="img-responsive" src="pages/LAMP/images/board_.png" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+	</div>
+
     
     <a  name="surgerybot"></a>
 	<div class="content-section-b">
@@ -132,7 +176,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                    <a href="pages/proj7/lightsheet.html"> <h2 class="section-heading"> Lightsheet Microscope</h2> </a>
-                    <p class="lead">Designed and implemented a complete lightsheet microscope system.</p>
+                    <p class="lead">Designed and built a complete lightsheet microscope system.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                         <img class="img-responsive" src="img/lightsheet_title.jpg" alt="">
@@ -177,7 +221,7 @@
                   <hr class="section-heading-spacer">
                   <div class="clearfix"></div>
                  <a href="https://github.com/JulianPitney/3D-Kinematics"> <h2 class="section-heading">3D Kinematics Box</h2> </a>
-                  <p class="lead">Designed and implemented a markerless, 360° coverage, hardware synchronized and fully automated 3D pose estimation system.</p>
+                  <p class="lead">Designed and built a markerless, 360° coverage, hardware synchronized and fully automated 3D pose estimation system.</p>
               </div>
               <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                       <img class="img-responsive" src="img/kinbox.jpg" alt="">
@@ -198,7 +242,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                    <a href="https://github.com/JulianPitney/HomeCageSinglePellet"> <h2 class="section-heading"> Automated Single Pellet</h2> </a>
-                    <p class="lead">Designed and implemented a system that hosts up to 5 mice in their home environment and automatically administers the single pellet reaching test while collecting useful data.</p>
+                    <p class="lead">Designed and built a system that hosts up to 5 mice in their home environment and automatically administers the single pellet reaching test while collecting useful data.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/reach.gif" alt="">
